--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: NJUPT_AUTO_StudyMaterials
+logo: https://avatars0.githubusercontent.com/u/46742360?s=400&u=9d73767910a90979b5809fcf6290d03d5d7f4f79
+description: 南京邮电大学自动化专业课程资料库
+show_downloads: true
+
 theme: jekyll-theme-minimal
